--- a/calculator.html
+++ b/calculator.html
@@ -13,6 +13,10 @@ function four(){
   var num = document.getElementById("n1");
   num.value = Math.pow(num.value, 4);
 }
+function cuadrado(){
+  var num = document.getElementById("n1");
+  num.value = Math.pow(num.value,2);
+}
 </script>
 </head>
 <body>
@@ -23,6 +27,7 @@ function four(){
     <button onclick="cube()"> x^3 </button>
     <button onclick="sine()"> sin() </button>
     <button onclick="four()"> x^4 </button>
-  </p>
+    <button onclick="cuadrado()"> x^2 </button>
+ </p>
 </body>
 </html>
