--- a/calculator.html
+++ b/calculator.html
@@ -17,6 +17,11 @@ function cuadrado(){
   var num = document.getElementById("n1");
   num.value = Math.pow(num.value,2);
 }
+function inverso(){
+  var num = document.getElementById("n1");
+  num.value = Math.pow(num.value,-1);
+}
+
 </script>
 </head>
 <body>
@@ -28,6 +33,7 @@ function cuadrado(){
     <button onclick="sine()"> sin() </button>
     <button onclick="four()"> x^4 </button>
     <button onclick="cuadrado()"> x^2 </button>
+    <button onclick="inverso()"> 1/x </button>
  </p>
 </body>
 </html>
